# Guardium

./: .gitignore  README.md  pyproject.toml  run_agent.py
datasets/benchmarks/aegisbench_live_v1/: cases.jsonl
datasets/benchmarks/aegisbench_v1/: cases.jsonl
docs/: action_gate.md  aegisbench_v1.md  agent_runtime.md  goal_vault.md  sentinel.md
evaluation/action_gate/: README.md  __init__.py
evaluation/action_gate/datasets/: cross_domain_actions.jsonl  document_qa_actions.jsonl  ecommerce_actions.jsonl  email_assistant_actions.jsonl
evaluation/action_gate/policies/: cross_domain.yaml  document_qa.yaml  ecommerce.yaml  email_assistant.yaml
evaluation/action_gate/scripts/: __init__.py  action_eval_lib.py  generate_action_gate_report.py  (+2 more)
evaluation/aegisbench/: __init__.py  aegisbench_lib.py  run_aegisbench.py  run_aegisbench_live.py
evaluation/agentdojo/: README.md  run_pilot_benchmark.py  smoke_agentdojo_adapter.py  smoke_agentdojo_real.py
evaluation/policies/: email_assistant.yaml  email_assistant_stage5.yaml
evaluation/sentinel/: deterministic_validation.py  smoke_sentinel_integration.py
examples/: action_gate_basic.py  goal_vault_basic.py
tests/: test_layer0.py  test_request_gate.py  test_response_gate.py  test_sentinel_integration.py
tests/agent_runtime/: test_agent_runtime.py
tests/evaluation/: test_sentinel_deterministic_validation.py
tests/integrations/: test_agentdojo_adapter.py  test_agentdojo_benchmark_harness.py  test_agentdojo_pipeline.py
tests/runtime/: test_action_gate.py  test_goal_vault.py  test_goal_vault_redis_integration.py
(+42 files in other folders)
